MODBULKOPS-429 - Commit changes - MARC Bib records with administrative data (#368)